fixed overflow problem on mobile-sized search bar, improved nav bar, added fun illustration to Home

--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,3 @@ h1, h2, h3, h4, p {
 .Nav + .content {
   padding-top: 100px;
 }
-
-@media screen and (max-width: 480px) {
-  .Nav + .content {
-    padding-top: 150px;
-  }
-}
