--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,3 @@
 .Home {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    vertical-align: middle;
+    display: block;
 }
