--- a/src/styles/JobCard.css
+++ b/src/styles/JobCard.css
@@ -4,8 +4,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin: 20px;
-    width: 80%;  
+    width: 80%;
+    margin: 10px;
     max-width: 300px;
     padding-left: 20px;
 }
@@ -20,7 +20,7 @@
     padding: 10px;
     padding-left: 15px;
     padding-right: 15px;    
-    /* margin: 10px; */
+    margin: 10px;
     cursor: pointer;
     background-color: #5F86EB;
 }
