--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -18,7 +18,7 @@
 .SearchBar-button {
     font-size: 20px;
     font-weight: 600;
-    height: 46px;
+    height: 40px;
     border: 2px solid black;
     border-radius: 4px;
     margin: 10px;
@@ -29,4 +29,34 @@
 .SearchBar-button:hover {
     background-color: black;
     color: white;
+}
+
+@media screen and (max-width: 480px) {
+    .SearchBar {
+      max-width: 1200px;
+      margin: 0px;
+      padding: 0px !important;
+      display: inline;
+    }
+  
+    .SearchBar-field {
+      padding-left: 10px;
+      font-size: 15px;
+      border-radius: 4px;
+      border: 2px solid black;
+      width: 260px !important;
+      max-width: 1100px;
+      height: 40px;
+    }
+  
+    .SearchBar-button {
+      font-size: 15px;
+      font-weight: 600;
+      height: 40px;
+      border: 2px solid black;
+      border-radius: 4px;
+      margin: 5px;
+      cursor: pointer;
+      background-color: white;
+    }
 }
